[project]
name = "Hillel_study"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vladyslav Khimich", email = "vladkot1992@gmail.com"},
]
dependencies = [
    "flask>=3.0.2",
    "faker>=23.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
